--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h1>Haloo</h1>
                     <h3>Saya Hann</h3>
                     <p> Perkenalkan nama saya Dhani Fikri Setiawan. Saat ini saya merupakan seorang mahasiswa aktif di Universitas Komputer Indonesia (UNIKOM), dan saya saat ini saya sedang berada di semester 2 jurusan Sistem Informasi. Saya sangat semangat untuk mempelajari dan mengembangkan keterampilan di bidang teknologi informasi, khususnya dalam hal pengolaan dan integrasi Sistem Informasi</p>
-                    <a href="#Home" class="btn">Go to About Hann</a>
+                    <a href="#about" class="btn">Go to About Hann</a>
                 </div>
                 <div class="Home-img">
                     <div class="rhombus">
